fix overflowing container

--- a/styles/components/_hero.scss
+++ b/styles/components/_hero.scss
@@ -8,7 +8,7 @@
         &::after {
             content: '';
             display: block;
-            width: 700px;
+            width: 100%;
             height: 300px;
             position: absolute;
             bottom: 0;
@@ -153,6 +153,16 @@
             position: absolute;
             top: -17px;
             left: -64px;
+        }
+    }
+}
+
+@media screen and (min-width: 700px) {
+    .hero__ {
+        &container {
+            &::after {
+                width: 700px;
+            }
         }
     }
 }
